syntax = "proto3";

message Email {
    string from_name = 1;
    string to_address = 2;
    string subject = 3;
    string html = 4;
}

message SendEmail {
    repeated Email emails = 1;
}
